Respond to Chris's feedback

--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -319,3 +319,11 @@ the host may have additional synchronization concerns for host visibility.
 \gls{lane}s executing on the device. Constant memory is read-only, and an
 implementation can assume that constant memory is immutable and cannot change
 during execution.
+
+\Sub{Memory Spaces}{Intro.Memory.Alignment}
+
+TODO
+
+\p The alignment requirements of an offset into device memory space is the size
+ in bytes of the largest scalar type contained in the given aggregate type.
+
