Add metting notes

--- a/docs/DesignMeetingMinutes/2025-02-04.md
+++ b/docs/DesignMeetingMinutes/2025-02-04.md
@@ -36,7 +36,28 @@
 ### Current Business
 
 * https://github.com/microsoft/hlsl-specs/pull/317
+  * Action Item: @llvm-beanz to review updates from AMD
 * https://github.com/microsoft/hlsl-specs/pull/325
+  * Action Item: @farzonl & @V-FEXrt to review.
 * https://github.com/microsoft/hlsl-specs/pull/343
+  * Action Item: @llvm-beanz to review.
 * https://github.com/microsoft/hlsl-specs/pull/344
+  * Action Item: @llvm-beanz to review.
 * https://github.com/microsoft/hlsl-specs/pull/358
+  * The PR needs revision based on feedback, but one outstanding question is
+  * @llvm-beanz: Flat doesn't describe what the conversion does
+  * We had a lengthy discussion about @llvm-beanz's dislike of the "flat" term.
+  * Alternatives suggested: elementwise convesrion, 
+  * Action Item: @spall to update
+
+## Other Discussion
+
+* Effects Syntax support in HLSL 202x
+  * We have an issue to turn effects syntax usage into errors in HLSL 202x - https://github.com/microsoft/hlsl-specs/issues/380
+  * This will potentially cause some source breakage for codebases that are shared between DX 10/11 and DX 12.
+  * There is at least one known case where DXC assumes valid C++11 syntax is an effects annotation (https://github.com/microsoft/DirectXShaderCompiler/issues/7111).
+  * Today, DXC ignores the effects annotation, which seems to users to be ignoring a valid intializer.
+  * This syntax is C++11 initialization syntax that is not intended to be supported in DXC (which is C++98-based), but will be supported in Clang.
+  * Proposed Solution:
+    * In DXC: Make all effects syntax parsing errors in HLSL 202x mode.
+    * In Clang: Make any effects-like syntax that is valid in modern C++ warn that it is a 202y extension.
