--- a/docs/DesignMeetingMinutes/2025-02-04.md
+++ b/docs/DesignMeetingMinutes/2025-02-04.md
@@ -20,42 +20,44 @@
 ## PRs
 
 ### Carried Forward
-* https://github.com/microsoft/hlsl-specs/pull/34
+* [[0007] Big update to flesh out const instance methods](https://github.com/microsoft/hlsl-specs/pull/34)
   * Action Item: @llvm-beanz update based on @tex3d's feedback
   * Action Item: @pow2clk to review the PR and comment
-* https://github.com/microsoft/hlsl-specs/pull/65
+* [[0002] Specify the grammar formulations for attributes](https://github.com/microsoft/hlsl-specs/pull/65)
   * Action Item: @pow2clk to review.
-* https://github.com/microsoft/hlsl-specs/pull/77
+* [[SM6.8] Add proposal for DXIL 1.8](https://github.com/microsoft/hlsl-specs/pull/77)
   * This isn't really in a great shape, but it is useful documentation to not lose.
   * Action Item: @llvm-beanz to merge
-* https://github.com/microsoft/hlsl-specs/pull/324
+* [[dxil] Proposal to add new debug printf dxil op](https://github.com/microsoft/hlsl-specs/pull/324)
   * @pow2clk and @tex3d will review this in more detail.
-* https://github.com/microsoft/hlsl-specs/pull/361
+* [Rework hlsl-vector-type into two specs](https://github.com/microsoft/hlsl-specs/pull/361)
   * Action Item: @llvm-beanz to review.
 
 ### Current Business
 
-* https://github.com/microsoft/hlsl-specs/pull/317
+* [Add proposal for scalar layout for constant buffers](https://github.com/microsoft/hlsl-specs/pull/317)
   * Action Item: @llvm-beanz to review updates from AMD
-* https://github.com/microsoft/hlsl-specs/pull/325
+* [[202y] Propose adding C++11-style constructors](https://github.com/microsoft/hlsl-specs/pull/325)
   * Action Item: @farzonl & @V-FEXrt to review.
-* https://github.com/microsoft/hlsl-specs/pull/343
+* [[202x] Propose adding vk::SampledTexture* types](https://github.com/microsoft/hlsl-specs/pull/343)
   * Action Item: @llvm-beanz to review.
-* https://github.com/microsoft/hlsl-specs/pull/344
+* [Add resource chapter documenting buffers and bindings](https://github.com/microsoft/hlsl-specs/pull/344)
   * Action Item: @llvm-beanz to review.
-* https://github.com/microsoft/hlsl-specs/pull/358
+* [Specification language to describe flat conversions and aggregate splats](https://github.com/microsoft/hlsl-specs/pull/358)
   * The PR needs revision based on feedback, but one outstanding question is
+    what do we name the cast?
   * @llvm-beanz: Flat doesn't describe what the conversion does
   * We had a lengthy discussion about @llvm-beanz's dislike of the "flat" term.
-  * Alternatives suggested: elementwise convesrion, 
+  * Alternatives suggested: elementwise conversion, reshape conversion
   * Action Item: @spall to update
 
 ## Other Discussion
 
 * Effects Syntax support in HLSL 202x
-  * We have an issue to turn effects syntax usage into errors in HLSL 202x - https://github.com/microsoft/hlsl-specs/issues/380
+  * We have an issue to turn effects syntax usage into errors in HLSL 202x - [[202x] Remove HLSL Effects Syntax Support](https://github.com/microsoft/hlsl-specs/issues/380)
   * This will potentially cause some source breakage for codebases that are shared between DX 10/11 and DX 12.
-  * There is at least one known case where DXC assumes valid C++11 syntax is an effects annotation (https://github.com/microsoft/DirectXShaderCompiler/issues/7111).
+  * There is at least one known case where DXC assumes valid C++11 syntax is an effects annotation
+    ([C++-style initialization of vectors (int2 x{0,1}) does not work, but compiles](https://github.com/microsoft/DirectXShaderCompiler/issues/7111)).
   * Today, DXC ignores the effects annotation, which seems to users to be ignoring a valid intializer.
   * This syntax is C++11 initialization syntax that is not intended to be supported in DXC (which is C++98-based), but will be supported in Clang.
   * Proposed Solution:
