--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -161,11 +161,11 @@ as the same non-parenthesized expression.
 
 \p A \textit{postfix-expression} followed by an expression in square brackets
 (\texttt{[ ]}) is a subscript expression. In an array subscript expression of
-the form \texttt{E1[E2]}, \texttt{E1} must either be a variable of array of
-\texttt{T[]}, or an object of type \texttt{T} where \texttt{T} provides an
-overloaded implementation of \texttt{operator[]} (\ref{Overload}).\footnote{HLSL
-does not support the base address of a subscript operator being the expression
-inside the braces, which is valid in C and C++.}
+the form \texttt{E1[E2]}, \texttt{E1} must either be a variable of array,
+vector, or matrix of \texttt{T[]}, or an object of type \texttt{T} where
+\texttt{T} provides an overloaded implementation of \texttt{operator[]}
+(\ref{Overload}).\footnote{HLSL does not support the base address of a subscript
+operator being the expression inside the braces, which is valid in C and C++.}
 
 \Sec{Function Calls}{Expr.Post.Call}
 
