Updates based on feedback from @damyanp

--- a/proposals/0020-hlsl-202x-202y.md
+++ b/proposals/0020-hlsl-202x-202y.md
@@ -91,7 +91,7 @@ causes some source incompatibilities as cited in the [clang
 docs](https://clang.llvm.org/docs/HLSL/ExpectedDifferences.html). Taking these
 behavior changes into HLSL makes HLSL's overload best-match algorithm more
 familiar and will produce ambiguous resolution errors instead of potentially
-choosing the wrong overload when ambiguity exists in the source.
+choosing an unexpected overload when ambiguity exists in the source.
 
 Adopting C++ overload best match and set selection rules implements proposal
 [0007 `const` non-static member
@@ -113,7 +113,9 @@ lists](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0005-strict-i
 HLSL 2021 & 202x have special rules for aggregate initializers such that the
 source-provided structure of braced initializer lists is ignored and an
 element-wise initialization is performed. This conflicts with objects having
-constructors, destructors, or user-provided conversion functions.
+constructors, destructors, or user-provided conversion functions. It also
+conflicts with [`union`
+types](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0004-unions.md).
 
 HLSL 202y adopts support for constructors and destructors, and C++'s rules for
 aggregate initialization.
@@ -121,14 +123,19 @@ aggregate initialization.
 #### Other Mostly Free Features
 
 Other C++ features have made their way in via Clang's implementation preserving
-C++ constructs, but not all will be standardized in HLSL 202y. A few notable
-features that should make the cut are:
+C++ constructs. A few notable features that we expect to standardize in HLSL
+202y are:
 
 * [`constexpr` functions](https://github.com/microsoft/hlsl-specs/issues/74)
 * [`constexpr` variables](https://github.com/microsoft/hlsl-specs/issues/21)
 * [`auto` variable declarations](https://github.com/microsoft/hlsl-specs/issues/24)
 * `static_assert`
 * [`bit_cast`](https://github.com/microsoft/hlsl-specs/issues/318)
+* `public`, `private` and `protected` access specifiers.
 
+Additionally, we do have some features that we're experimenting with in Clang
+which may or not make the cut for HLSL 202y. Those include:
+* [C++ lambdas](https://github.com/microsoft/hlsl-specs/issues/21)
+* [`union` types](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0004-unions.md)
 
 <!-- {% endraw %} -->
