Updating wording on consensus call

--- a/docs/DesignMeetingMinutes/2025-02-18.md
+++ b/docs/DesignMeetingMinutes/2025-02-18.md
@@ -34,11 +34,11 @@
 ### Current Business
 
 * [Add proposal for scalar layout for constant buffers](https://github.com/microsoft/hlsl-specs/pull/317)
-  * Call for acceptance.
+  * Call for consensus on consideration.
   * @llvm-beanz: There are details in the proposal that still need to be worked
     out, but I'm comfortable calling for acceptance and we can merge and iterate.
 * [Adding proposal for C++ constructors](https://github.com/microsoft/hlsl-specs/pull/325)
-  * Call for acceptance.
+  * Call for consensus on consideration.
   * Carried forward - Action Item: @V-FEXrt to review.
   * @llvm-beanz: There are more details here that we should fully spec out like
     the required wider changes to object initialization.
