Begin specifying object model
This change begins to define the object model for HLSL and clearly denotes aggregate and non-aggregate types. It provides base definitions for sub-object ordering and scalar elementwise ordering. It also defines non-decomposable objects and stubs out sections for constructon and access control.

HLSL does not currently support user-defined constructors or access control specifiers, however both are used implicitly and denote non-decomposible objects.

Fixes #372

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -404,6 +404,7 @@ type \texttt{T} is \(T\).
 type or if the sequence of types defined by the scalar representation \(SR(T1)\)
 and scalar representation \(SR(T2)\) are identical.
 
+\Sec{Storage Duration}{Basic.Storage}
 \Sec{Lvalues and rvalues}{Basic.lval}
 
 \p Expressions are classified by the type(s) of values they produce. The valid
