--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -7,6 +7,8 @@
 \Ch{Classes}{Classes}
 \Sec{Static Members}{Classes.Static}
 \Sec{Conversions}{Classes.Conversions}
+\Sec{Member Access Control}{Classes.Access}
+\Sec{Special Member Functions}{Classes.Special}
 \Ch{Templates}{Template}
 \Sec{Template Instantiation}{Template.Inst}
 \Sec{Partial Ordering of Function Templates}{Template.Func.Order}
