Constant buffers language spec - initial draft

--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -4,7 +4,7 @@
 % forward references can be inserted into the specification as it is being
 % written to force updating the references as they change.
 
-\Ch{Classes}{Classes}
+\Ch{Classes and Structures}{Classes}
 \Sec{Static Members}{Classes.Static}
 \Sec{Conversions}{Classes.Conversions}
 \Ch{Templates}{Template}
