--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -8,14 +8,25 @@
 
   \define{declaration}\br
   \textit{name-declaration}\br
-  \textit{special-declaration}
+  \textit{special-declaration}\br
+  \textit{empty-declaration}
 
   \define{name-declaration}\br
+  \textit{variable-declaration}\br
+  \textit{function-declaration}\br
+  \textit{namespace-declaration}\br
+  \textit{record-declaration}\br
+  \textit{template-declaration}\br
+  \textit{type-alias-declaration}\br
   ...
-
+  
   \define{special-declaration}\br
   \textit{export-declaration-group}\br
+  \textit{cbuffer-declaration-group}\br
   ...
+
+  \define{empty-declaration} \terminal{;}
+  
 \end{grammar}
 
 \Sec{Specifiers}{Decl.Spec}
