Updating meeting minutes

--- a/docs/DesignMeetingMinutes/2025-02-18.md
+++ b/docs/DesignMeetingMinutes/2025-02-18.md
@@ -35,10 +35,12 @@
 
 * [Add proposal for scalar layout for constant buffers](https://github.com/microsoft/hlsl-specs/pull/317)
   * Call for consensus on consideration.
+    * No objections, will be merged under-consideration once ready.
   * @llvm-beanz: There are details in the proposal that still need to be worked
     out, but I'm comfortable calling for acceptance and we can merge and iterate.
 * [Adding proposal for C++ constructors](https://github.com/microsoft/hlsl-specs/pull/325)
   * Call for consensus on consideration.
+    * No objections, will be merged under-consideration once ready.
   * Carried forward - Action Item: @V-FEXrt to review.
   * @llvm-beanz: There are more details here that we should fully spec out like
     the required wider changes to object initialization.
