One more agenda item from last meeting

--- a/docs/DesignMeetingMinutes/2025-03-18.md
+++ b/docs/DesignMeetingMinutes/2025-03-18.md
@@ -40,6 +40,8 @@
 
 ### Current Business
 
+* [Update on 202x & 202y](https://github.com/microsoft/hlsl-specs/pull/391)
+  * Request for reviews
 * [Introduce really rough linalg matrix proposal](https://github.com/microsoft/hlsl-specs/pull/404)
   * Request for reviews
 * [Rough proposal collecting thoughts on uniformity](https://github.com/microsoft/hlsl-specs/pull/405)
