Add issues and PRs to track status

--- a/proposals/0020-hlsl-202x-202y.md
+++ b/proposals/0020-hlsl-202x-202y.md
@@ -56,8 +56,14 @@ DXC and it is expected to cause potential disruption.
 
 Existing proposals that fall into this category are:
 * [Numeric Constants](/proposals/0003-numeric-constants.md)
+  * DXC Issue - [[202x] [0003] Numeric Constants](https://github.com/microsoft/DirectXShaderCompiler/issues/7218)
+  * Clang Issue - [[202x] [0003] Numeric Constants](https://github.com/llvm/llvm-project/issues/131808)
 * [Conforming Literals](/proposals/0017-conforming-literals.md)
+  * Completed in DXC - [[202x] Implementaiton of conforming literals](https://github.com/microsoft/DirectXShaderCompiler/pull/6572)
+  * Completed in Clang - [[HLSL] Implement 202x conforming literals](https://github.com/llvm/llvm-project/pull/91015)
 * [Loop Unroll Factor](/proposals/0022-hlsl-loop-unroll-factor.md)
+  * DXC Issue - [[202x][0022] Loop Unroll Factor](https://github.com/microsoft/DirectXShaderCompiler/issues/7219)
+  * Completed in Clang - [[HLSL] add loop unroll](https://github.com/llvm/llvm-project/pull/93879)
 
 In addition to the new features, HLSL 202x will remove features that were not
 fully supported by DXC. Issues tracking 202x feature deprecations:
