Update with notes from the meeting

--- a/docs/DesignMeetingMinutes/2025-03-18.md
+++ b/docs/DesignMeetingMinutes/2025-03-18.md
@@ -11,11 +11,10 @@
 > visit https://cla.microsoft.com.
 
 ## Administrivia
-* FYI: Updaters coming to design meeting terms
+* FYI: Updates coming to design meeting terms
 
 ## Issues
 * No marked issues
-* Action Item: @llvm-beanz to review issues for HLSL 202x
 
 ## PRs
 
@@ -23,8 +22,10 @@
 
 * [[0007] Big update to flesh out const instance methods](https://github.com/microsoft/hlsl-specs/pull/34)
   * Action Item: @pow2clk to review the PR and comment
+  * Action Item: @V-FEXrt & @spall to review
 * [[0002] Specify the grammar formulations for attributes](https://github.com/microsoft/hlsl-specs/pull/65)
   * @llvm-beanz provided update, needs review.
+  * Action Item: @V-FEXrt to review.
 * [[dxil] Proposal to add new debug printf dxil op](https://github.com/microsoft/hlsl-specs/pull/324)
   * @pow2clk and @tex3d will review this in more detail.
 * [[202x] Propose adding vk::SampledTexture* types](https://github.com/microsoft/hlsl-specs/pull/343)
@@ -32,6 +33,7 @@
 * [Specification language to describe flat conversions and aggregate splats](https://github.com/microsoft/hlsl-specs/pull/358)
   * @llvm-beanz provided feedback, need second review.
   * Action Item: @spall to update
+  * Action Item: @V-FEXrt to review.
 * [Add proposal for scalar layout for constant buffers](https://github.com/microsoft/hlsl-specs/pull/317)
   * Action Item @llvm-beanz - Move to merge.
 * [Adding proposal for C++ constructors](https://github.com/microsoft/hlsl-specs/pull/325)
@@ -48,6 +50,7 @@
   * Request for reviews
 * [Constant buffers language spec - initial draft](https://github.com/microsoft/hlsl-specs/pull/419)
   * Action Item: @llvm-beanz to review
+  * Action Item: @V-FEXrt to review.
 
 ### SM 6.9
 
@@ -72,6 +75,6 @@
   * [Remove unsized arrays](https://github.com/microsoft/hlsl-specs/issues/141)
   * [Error on cbuffer variable initializer](https://github.com/microsoft/hlsl-specs/issues/259)
   * [static variable inside cbuffer are not marked const](https://github.com/microsoft/hlsl-specs/issues/351)
-    * @hekota can you review this?
+    * Action Item: @V-FEXrt to review.
   * [Remove HLSL Effects Syntax
     Support](https://github.com/microsoft/hlsl-specs/issues/380)
