Run pdflatex twice
The first time generates the PDF with incomplete references, the second
time fills it out with the full references.

--- a/specs/language/CMakeLists.txt
+++ b/specs/language/CMakeLists.txt
@@ -43,6 +43,9 @@ add_custom_target(pdf
                   COMMAND ${PDFLATEX_COMPILER}
                           -output-directory ${CMAKE_BINARY_DIR}
                           ${main_file}
+                  COMMAND ${PDFLATEX_COMPILER}
+                          -output-directory ${CMAKE_BINARY_DIR}
+                          ${main_file}
                   COMMENT "Assembling ${PROJECT_NAME}.pdf"
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                   DEPENDS ${main_file} ${PROJECT_NAME}-prebuild ${PROJECT_NAME}-glossaries)
