--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -100,7 +100,7 @@ traversal accessing each subobject of the assignment-expression.
 have \(m\) possible elements during parsing, where \(m>0\).
 
 \p An initializer-list is a valid initializer if for each element
-\(E_{n\mod{}m?}\) in the target object's flattened ordering there is a
+\(E_{n \bmod m}\) in the target object's flattened ordering there is a
 corresponding initializer \(I_n\) in the flattened initializer sequence, which
 can be implicitly converted to the element's type. For arrays of unknown size,
 the total number of initializers must be a multiple of the array's base element
