Update proposal number in text

--- a/proposals/0033-dxil19.md
+++ b/proposals/0033-dxil19.md
@@ -2,7 +2,7 @@
 
 # DXIL 1.9
 
-* Proposal: [NNNN](NNNN-dxil19.md)
+* Proposal: [0033](0033-dxil19.md)
 * Author(s): [Damyan Pepper](https://github.com/damyanp)
 * Sponsor: [Damyan Pepper](https://github.com/damyanp)
 * Status: **Under Review**
