Updating meeting minutes

--- a/docs/DesignMeetingMinutes/2025-04-01.md
+++ b/docs/DesignMeetingMinutes/2025-04-01.md
@@ -50,7 +50,7 @@
 * [Cooperative Vectors Test Plan](https://github.com/microsoft/hlsl-specs/pull/428)
   * Action Item: @llvm-beanz to review.
 * [[0029] Clarify 16-byte underling allocation requirement](https://github.com/microsoft/hlsl-specs/pull/430)
-  * Neds second review
+  * Needs second review
 * **NEW** [[0031] Add MatrixRef, VectorRef, Vector, Mul, MulAdd, OuterProductAccumulate, VectorAccumulate](https://github.com/microsoft/hlsl-specs/pull/451)
 * **NEW** [[0029] Make outerproductaccumulate params consistent with other ops](https://github.com/microsoft/hlsl-specs/pull/465)
 * **NEW** [[0029] Rename optimal matrix layouts to match operations](https://github.com/microsoft/hlsl-specs/pull/468)
