--- a/specs/language/resources.tex
+++ b/specs/language/resources.tex
@@ -12,7 +12,8 @@ The typed buffer class template represents a one-dimensional resource containing
 Its contents are indexed by typed access to each element
 Types may have their formats converted upon load.
 
-Template type can be any type that totals or can be padded to 16 bytes.
+The element type may be any type up to 16 bytes in size. Elements may be padded
+to 16 bytes if the element type is smaller than 16 bytes.
 
 All typed buffers can be read through subscript operators or Load methods.
 Writable typed buffers can be written through subscript operators.
@@ -681,9 +682,6 @@ Constant buffer represent a resource that contains read-only constant data in a 
 
   \define{cbuffer-declaration}\br
   \textit{variable-declaration}\br
-  \textit{namespace-declaration}\br
-  \textit{function-declaration}\br
-  \textit{record-declaration}\br
   \textit{empty-declaration}
 \end{grammar}
 
@@ -695,14 +693,11 @@ Constant buffer represent a resource that contains read-only constant data in a 
 
 \p Variable declarations in the \texttt{cbuffer} declaration group cannot have \texttt{groupshared} or \texttt{static} variable modifiers.
 
-\p Any declaration in the \texttt{cbuffer} declaration group that is not a
-\textit{namespace-declaration} or a \textit{variable-declaration} is going to be
-processed as if it was declared outside of the group at the
-global scope.
+\p Other declarations in the \texttt{cbuffer} declaration group such as
+\textit{namespace-declaration}, \textit{record-declaration} or
+\textit{function-declaration} are not allowed.
 
 \p Nesting of \texttt{cbuffer} declaration groups is not allowed.
-
-\p Any \textit{namespace-declaration} in the \texttt{cbuffer} declaration group can contain only declarations allowed by \textit{cbuffer-declaration}.
 
 \p For example:
 
