Update with notes

--- a/docs/DesignMeetingMinutes/2025-04-15.md
+++ b/docs/DesignMeetingMinutes/2025-04-15.md
@@ -34,7 +34,8 @@
   * Request for extra eyes
   * Action Item: @llvm-beanz to update
 * [Constant buffers language spec - initial draft](https://github.com/microsoft/hlsl-specs/pull/419)
-  * Action Item: @hekota to update.
+  * What is the correct relationship between `cbuffer` and `namespace`?
+    * [Some fun cbuffer examples](https://godbolt.org/z/GcKes6Eeh)
 
 ### Current Business
 * [New Proposal: Draft proposal to modify resource typing in HLSL](https://github.com/microsoft/hlsl-specs/pull/461)
@@ -49,5 +50,7 @@
 * [[0030][SM6.9] Add list of ops with vector overload](https://github.com/microsoft/hlsl-specs/pull/481)
 * [[0029] Make "input signed op kind"s be "is input unsigned" and booleans](https://github.com/microsoft/hlsl-specs/pull/483)
 * [[0027] Avoid using undef for dx.op.MaybeReorderThread](https://github.com/microsoft/hlsl-specs/pull/487)
+* [Cooperative vectors API proposal](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0031-hlsl-vector-matrix-operations.md)
+  * Please review and provide feedback!
 
 ## Other Discussion
