Update notes post-meeting

--- a/docs/DesignMeetingMinutes/2025-04-29.md
+++ b/docs/DesignMeetingMinutes/2025-04-29.md
@@ -37,11 +37,18 @@
 * [[Decl.Init.Agg] Arrays of unknown size](https://github.com/microsoft/hlsl-specs/pull/469)
   * Ready for review
 * [Add an initial proposal for HLSL 202x deprecations](https://github.com/microsoft/hlsl-specs/pull/488)
+  * Why isn't `uniform` propagated to DXIL?
+    * @llvm-beanz: I don't actually know the history. DXC has never done anything with the keyword and we don't have a representation in DXIL.
+    * We do have a larger proposal to address [uniformity](https://github.com/microsoft/hlsl-specs/pull/405)
+    * We should also consider if that proposal needs DXIL and SPIRV changes to preserve information for the backends.
+  * ISVs represented in the room did not express any immediate concerns about these deprecations.
 * Constant Buffers!
   * [Constant buffers language spec - initial draft](https://github.com/microsoft/hlsl-specs/pull/419)
   * [Constant Buffer Contexts](https://github.com/microsoft/hlsl-specs/pull/497)
   * What is the correct relationship between `cbuffer` and `namespace`?
     * [Some fun cbuffer examples](https://godbolt.org/z/GcKes6Eeh)
+  * We would like to undesrstand the implact of this change on existing shader codebases.
+  * ISVs represented in the room did not express any immediate concerns.
 
 ### SM 6.9
 
