Close 'raw' tag
(cherry picked from commit 95e8dc632aa648d53440186c694152a51f5e8207)

--- a/proposals/0033-dxil19.md
+++ b/proposals/0033-dxil19.md
@@ -59,3 +59,4 @@ Vector / Matrix Operations.
 [Proposal 0030]: 0030-dxil-vectors.md
 [Proposal 0031]: 0031-hlsl-vector-matrix-operations.md
 
+<!-- {% endraw %} -->
