--- a/docs/DesignMeetingMinutes/2025-04-29.md
+++ b/docs/DesignMeetingMinutes/2025-04-29.md
@@ -47,7 +47,7 @@
   * [Constant Buffer Contexts](https://github.com/microsoft/hlsl-specs/pull/497)
   * What is the correct relationship between `cbuffer` and `namespace`?
     * [Some fun cbuffer examples](https://godbolt.org/z/GcKes6Eeh)
-  * We would like to undesrstand the implact of this change on existing shader codebases.
+  * We would like to undesrstand the impact of this change on existing shader codebases.
   * ISVs represented in the room did not express any immediate concerns.
 
 ### SM 6.9
